# serializer version: 1
# name: test_switch_states[platforms0][switch.freezer_superfreezing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.freezer_superfreezing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Superfreezing',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'superfreezing',
    'unique_id': 'Appliance_1-superfreezing',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_states[platforms0][switch.freezer_superfreezing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Freezer Superfreezing',
      'icon': 'mdi:snowflake',
    }),
    'context': <ANY>,
    'entity_id': 'switch.freezer_superfreezing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_states[platforms0][switch.refrigerator_supercooling-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.refrigerator_supercooling',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Supercooling',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'supercooling',
    'unique_id': 'Appliance_2-supercooling',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_states[platforms0][switch.refrigerator_supercooling-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator Supercooling',
      'icon': 'mdi:snowflake',
    }),
    'context': <ANY>,
    'entity_id': 'switch.refrigerator_supercooling',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_states[platforms0][switch.washing_machine_power_on-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.washing_machine_power_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:power',
    'original_name': 'Power on',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'power_on',
    'unique_id': '000186528088-poweronoff',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_states[platforms0][switch.washing_machine_power_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washing machine Power on',
      'icon': 'mdi:power',
    }),
    'context': <ANY>,
    'entity_id': 'switch.washing_machine_power_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
